tests/compile/struct-10.c
/**
RUN: %scc %s 2>&1 | filecheck %s
*/

struct node
{
  struct node* next;
  int value;
};

// CHECK: error: redefinition of `struct node`
struct node
{
  int value;
};
